# hacs-lidl_plus

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  hacs.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pull_requests.yml  release.yml
custom_components/lidl_plus/: __init__.py  config_flow.py  const.py  manifest.json  strings.json  todo.py
custom_components/lidl_plus/data/: __init__.py  lidl_plus_data_update_coordinator.py
custom_components/lidl_plus/domain/: __init__.py  convert_lidl_plus_coupons.py  lidl_plus_coupon.py  lidl_plus_data.py
custom_components/lidl_plus/flow/: __init__.py  config_flow.py  config_schema.py
custom_components/lidl_plus/translations/: en.json
test/: conftest.py  test_manifest.py
test/lidl_plus/: test_manifest.py
